--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,4 +1,35 @@
-html,
+
+.title {
+  background: #0070f3;
+  font-size: 24px;
+  color: white;
+  text-align: center;
+}
+.container {
+  background: white;
+}
+.checkbox {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  width: 100vw;
+  padding: 0px 12px;
+  margin-bottom: 40px;
+}
+.chart {
+  width: 90%;
+  margin: auto;
+}
+.checkboxItem {
+  width: 88px;
+  display: flex;
+  flex-direction: row;
+  margin-bottom: 8px;
+}
+.checkboxText {
+  color: black;
+  font-size: 14px;
+}
 body {
   padding: 0;
   margin: 0;
