--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,8 @@
   font-size: 24px;
   color: white;
   text-align: center;
+  padding: 8px 0px;
+  margin-bottom: 32px;
 }
 .container {
   background: white;
